crates/tether-adapter-shellhook/tests/snapshots/snapshot_tests__gemini_resp_context.snap
---
source: crates/tether-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 224
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  decision: approve
  hookSpecificOutput:
    additionalContext: scanned clean
exit_code: 0
